apps/docs/pages/contracts/api/v1/fragments/expiry.mdx
---
title: Expiry
description: Focused, tree-shakable ABI fragments for Expiry.
---

import SharedSnippet0 from "../../../../../shared/contracts/entrypoint.mdx";
import SharedSnippet1 from "../../../../../shared/contracts/fragment.mdx";
import SharedSnippet2 from "../../../../../shared/contracts/type-safety.mdx";

# Expiry

Focused, tree-shakable ABI fragments for Expiry.

## Import

```ts
import { getExpiryV1RegistrarAbi, getExpiryV1NameWrapperAbi } from "@ensforge/contracts/v1";
```

## Usage

:::code-group

```ts [contract.ts]
import { getContract } from "viem";

const contract = getContract({
  address,
  abi: getExpiryV1RegistrarAbi,
  client: publicClient,
});
```

```ts [client.ts]
// [!include ~/snippets/contracts/client.ts]
```

:::

## Exports

| Export                      | Description                                             |
| --------------------------- | ------------------------------------------------------- |
| `getExpiryV1RegistrarAbi`   | Immutable ABI value with viem-compatible literal types. |
| `getExpiryV1NameWrapperAbi` | Immutable ABI value with viem-compatible literal types. |

## Entrypoint

`@ensforge/contracts/v1`

<SharedSnippet0 />

<SharedSnippet1 />

## Type Safety

<SharedSnippet2 />

```ts
type Export = typeof getExpiryV1RegistrarAbi;
```

## Compose fragments

```ts
const abi = [...getExpiryV1RegistrarAbi, ...anotherFragment] as const;
```

Keep the composed value local to the call site so bundlers can remove unrelated contract surfaces.
