apps/docs/pages/contracts/api/v2/fragments/expiry.mdx
---
title: Expiry
description: Focused, tree-shakable ABI fragments for Expiry.
---

import SharedSnippet0 from "../../../../../shared/contracts/entrypoint.mdx";
import SharedSnippet1 from "../../../../../shared/contracts/fragment.mdx";
import SharedSnippet2 from "../../../../../shared/contracts/type-safety.mdx";

# Expiry

Focused, tree-shakable ABI fragments for Expiry.

## Import

```ts
import {
  getExpiryV2EthRegistryAbi,
  getExpiryV2TemporalRegistryAbi,
  getExpiryV2GracePeriodAbi,
  getExpiryV2UniversalResolverAbi,
} from "@ensforge/contracts/v2";
```

## Usage

:::code-group

```ts [contract.ts]
import { getContract } from "viem";

const contract = getContract({
  address,
  abi: getExpiryV2EthRegistryAbi,
  client: publicClient,
});
```

```ts [client.ts]
// [!include ~/snippets/contracts/client.ts]
```

:::

## Exports

| Export                            | Description                                             |
| --------------------------------- | ------------------------------------------------------- |
| `getExpiryV2EthRegistryAbi`       | Immutable ABI value with viem-compatible literal types. |
| `getExpiryV2TemporalRegistryAbi`  | Immutable ABI value with viem-compatible literal types. |
| `getExpiryV2GracePeriodAbi`       | Immutable ABI value with viem-compatible literal types. |
| `getExpiryV2UniversalResolverAbi` | Immutable ABI value with viem-compatible literal types. |

## Entrypoint

`@ensforge/contracts/v2`

<SharedSnippet0 />

<SharedSnippet1 />

## Type Safety

<SharedSnippet2 />

```ts
type Export = typeof getExpiryV2EthRegistryAbi;
```

## Compose fragments

```ts
const abi = [...getExpiryV2EthRegistryAbi, ...anotherFragment] as const;
```

Keep the composed value local to the call site so bundlers can remove unrelated contract surfaces.
